# fapes_lib

./: .gitignore  README.md  pyproject.toml  release.md
.agents/: AGENTS.MD
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.md  architecture.md  autenticacao.md  backlog.md  bdd.md  cicd.md  fapes-webservices-sig-api.md
docs/epics/: EPIC-001-autenticacao.md  EPIC-002-consultas-api.md  EPIC-003-extracao-dados.md  EPIC-004-exportacao-dados.md
docs/features/: autenticacao.feature  consultas_api.feature  exportacao_dados.feature  extracao_dados.feature
scripts/: budget_categories.py  dashboard.py  main.py  project_details.py  report.py  scholarship_details.py
src/fapes_lib/: __init__.py  exceptions.py  settings.py
src/fapes_lib/controllers/: __init__.py  api_client.py  authenticator.py  extractor.py  query_controller.py
src/fapes_lib/infrastructure/: __init__.py  http_client.py
src/fapes_lib/models/: __init__.py  responses.py
src/fapes_lib/views/: __init__.py  exporters.py
tests/: test_budget_categories.py  test_dashboard.py  test_main.py  test_package_import.py  test_project_details.py  test_report.py  test_scholarship_details.py
tests/bdd/: test_autenticacao_bdd.py  test_extracao_bdd.py
tests/integration/: test_real_editais_projetos.py
tests/unit/: test_bdd_documentation.py  test_exceptions.py  test_settings.py
tests/unit/controllers/: test_api_client.py  test_authenticator.py  test_extractor.py  test_query_controller.py
tests/unit/infrastructure/: test_http_client.py
tests/unit/models/: test_response_parser.py
tests/unit/views/: test_exporters.py
