[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fapes-lib"
version = "0.0.0"
description = "Biblioteca Python para extracao de dados da API FAPES webServicesSig."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ifesserra-lab" }
]
keywords = ["fapes", "api", "etl", "research", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-bdd>=7.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/ifesserra-lab/fapes_lib"
Repository = "https://github.com/ifesserra-lab/fapes_lib"
Issues = "https://github.com/ifesserra-lab/fapes_lib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
