[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fapes-lib"
version = "0.0.0"
description = "Biblioteca Python para extracao de dados da API FAPES webServicesSig."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ifesserra-lab" }
]
keywords = ["fapes", "api", "etl", "research", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "certifi>=2024",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
  "altair>=5.0",
  "pandas>=2.2",
  "streamlit>=1.40",
]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-bdd>=7.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff==0.15.11",
]

[project.urls]
Homepage = "https://github.com/ifesserra-lab/fapes_lib"
Repository = "https://github.com/ifesserra-lab/fapes_lib"
Issues = "https://github.com/ifesserra-lab/fapes_lib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "autenticacao: cenarios BDD de autenticacao",
  "epic-003: cenarios vinculados ao EPIC-003",
  "erro: cenarios BDD de falha esperada",
  "extracao: cenarios BDD de extracao encadeada",
  "epic-001: cenarios vinculados ao EPIC-001",
  "integration: testes opcionais que acessam servicos externos reais",
  "sem-dados: cenarios BDD sem registros retornados",
  "smoke: cenarios BDD principais",
  "us-002: cenarios vinculados a US-002",
  "us-003: cenarios vinculados a US-003",
  "us-014: cenarios vinculados a US-014",
  "us-015: cenarios vinculados a US-015",
  "us-016: cenarios vinculados a US-016",
  "us-017: cenarios vinculados a US-017",
  "us-018: cenarios vinculados a US-018",
]
filterwarnings = [
  "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:gherkin.gherkin_line",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
